DM-18123: fixed 'Select Contraints' not showing up in some browsers

--- a/src/firefly/js/ui/tap/TableSelectViewPanel.css
+++ b/src/firefly/js/ui/tap/TableSelectViewPanel.css
@@ -13,7 +13,7 @@
 
 .TapSearch {
     display: flex;
-    height: 100%;
+    flex-grow: 1;
     flex-direction: column;
 }
 
